# bitbucket-hook-diffstat

./: .env  .gitignore  .gitpod.yml  README.md  pyproject.toml
bitbucket_hook_diffstat/: __init__.py  exceptions.py  main.py
tests/: test_bitbucket_hook_diffstat.py
