[tool.poetry]
name = "bitbucket-hook-diffstat"
version = "0.1.0"
description = ""
authors = ["Vlad <vova.avdoshka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
