[tool.poetry]
name = "bitbucket-hook-diffstat"
version = "0.5.1"
description = "Bitbucket push webhook handler to generate a list of files changed on a push"
authors = ["Vlad <vova.avdoshka@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/vavdoshka/bitbucket-hook-diffstat"
repository = "https://github.com/vavdoshka/bitbucket-hook-diffstat"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
